--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -11,10 +11,18 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
-        
         <activity
             android:name=".TaskSelectionActivity"
             android:label="@string/title_activity_task_selection" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".SustantiveTranslationActivity"
+            android:label="@string/title_activity_sustantive_translation" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
