--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".activities.TaskSelectionActivity"
+            android:name=".activities.MainTaskSelectionActivity"
             android:label="@string/title_activity_task_selection" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -39,16 +39,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".activities.AdminTaskSelectionActivity"
-            android:label="@string/title_activity_admin_task_selection" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        <activity
-            android:name=".activities.vocabulary.vocabularyelectionActivitytionActivity"
+            android:name=".activities.vocabulary.VocabularyEntrySelectionActivity"
             android:label="@string/title_activity_vocabulary_entry_selection" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -68,6 +59,33 @@
         <activity
             android:name=".activities.verbs.VerbsOptionsActivity"
             android:label="@string/title_activity_verbs_options" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.AdminTaskSelectionActivity"
+            android:label="@string/title_activity_admin_task_selection" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.verbs.VerbSelectionActivity"
+            android:label="@string/title_activity_verb_selection" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".activities.verbs.EditVerbActivity"
+            android:label="@string/title_activity_edit_verb" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
